solução para doc api swagger
